@@ -29,17 +29,16 @@ use base 'Exporter';
 
 # these banner lines have to be changed with every incompatible change of the
 # binary and source list file formats
+## NB: If bumping the BINLIST_FORMAT, remember to kill the UDEB fall back
+##     see read_bin_list
 use constant BINLIST_FORMAT => "Lintian's list of binary packages in the archive--V4";
 use constant SRCLIST_FORMAT => "Lintian's list of source packages in the archive--V4";
-use constant UDEBLIST_FORMAT => "Lintian's list of udeb packages in the archive--V3";
 
 our @EXPORT = (qw(
     BINLIST_FORMAT
     SRCLIST_FORMAT
-    UDEBLIST_FORMAT
     read_src_list
     read_bin_list
-    read_udeb_list
 ));
 
 sub read_src_list {
@@ -87,6 +86,11 @@ sub read_src_list {
   return \%source_info;
 }
 
+# Previously udeb-files had a different format; allow parsing a udeb file as
+# a binary file V4, assuming that is still the binary format at the time.
+my $UDEBLIST_FORMAT = "Lintian's list of udeb packages in the archive--V3";
+
+
 sub read_bin_list {
   my ($bin_list) = @_;
   my %binary_info;
@@ -99,8 +103,12 @@ sub read_bin_list {
   my $f;
   chop($f = <$IN>);
   if ($f ne BINLIST_FORMAT) {
-    close($IN);
-    croak "$bin_list has an incompatible file format";
+      # accept the UDEB 3 header as alternative to the BIN 4 file
+      if ($f ne $UDEBLIST_FORMAT || BINLIST_FORMAT !~ m/archive--V4$/o) {
+          close($IN);
+          croak "$bin_list has an incompatible file format";
+      }
+      # ok - was an UDEB 3 file, which is a BIN 4 file with a different header
   }
 
   # compatible format, so read file
@@ -128,49 +136,6 @@ sub read_bin_list {
   close($IN);
   return \%binary_info;
 }
-
-sub read_udeb_list {
-  my ($udeb_list) = @_;
-  my %udeb_info;
-
-  return {} unless $udeb_list && -s $udeb_list;
-
-  open(my $IN, '<', $udeb_list) or croak("open $udeb_list: $!");
-
-  # compatible file format?
-  my $f;
-  chop($f = <$IN>);
-  if ($f ne UDEBLIST_FORMAT) {
-    close($IN);
-    croak "$udeb_list has an incompatible file format";
-  }
-
-  # compatible format, so read file
-  while (<$IN>) {
-    chop;
-
-    next if m/^\s*$/o;
-    my ($udeb,$ver,$source,$source_ver,$file,$timestamp,$area) = split(m/\;/o,$_);
-
-    my $udeb_struct;
-    %$udeb_struct =
-      (
-       'package' => $udeb,
-       'version' => $ver,
-       'source' => $source,
-       'source-version' => $source_ver,
-       'file' => $file,
-       'timestamp' => $timestamp,
-       'area' => $area,
-       );
-
-    $udeb_info{$udeb} = $udeb_struct;
-  }
-
-  close($IN);
-  return \%udeb_info;
-}
-
 
 1;
 
